2013-01-12  Thomas Wolff  <towo@towo.net>

	* new-features.sgml (ov-new1.7.18): Add console enhancements.

2012-12-20  Corinna Vinschen  <corinna@vinschen.de>

	* pathnames.sgml (pathnames-at): Drop confusing description on
	"embedded double quotes".

2012-12-14  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml (ov-new1.7.18): Add sparse change.
	* pathnames.sgml (mount-table): Document sparse mount option.

2012-12-06  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* new-features.sgml (ov-new1.7.18): New section. Document cfsetspeed.

2012-11-26  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* configure.ac: Rename from configure.in.
	* configure.in: Delete.
	* configure: Regenerate.

2012-10-24  Corinna Vinschen  <corinna@vinschen.de>

	* configure.in: Add AC_NO_EXECUTABLES.
	* configure: Regenerate.

2012-10-20  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml (ov-new1.7.17): Add section.

2012-09-03  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* faq-what.xml: Fix typos, clarify responsibility slightly.

2012-08-03  Adam Dinwoodie  <Adam.Dinwoodie@metaswitch.com>

	 * faq-using.xml (faq.using.man): Make relevance to whatis explicit.

2012-07-20  Corinna Vinschen  <corinna@vinschen.de>

	* pathnames.sgml (pathnames-intro): Remove paragraph on UNC paths.
	Try to be clearer on POSIX vs. Win32 paths.
	(unc-paths): New section.
	(cygdrive): Fix a few SGML qualifiers.
	* setup-net.sgml: Move ntsec section from here...
	* using.sgml: ..to here.

2012-07-18  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* new-features.sgml (ov-new1.7.16): Document getmntent_r.

2012-07-17  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* faq-programming.xml (faq.programming.unix-gui): Update to
	reflect the availability of X11 toolkits on Cygwin.

2012-06-03  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml (ov-new1.7.16): Document ReFS support.

2012-05-10  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
