@@ -1,3 +1,7 @@
+2013-01-23  Christopher Faylor  <me.cygwin2012@cgf.cx>
+
+	* faq-programming.xml: Remove reference to "make check".
+
 2013-01-12  Thomas Wolff  <towo@towo.net>
 
 	* new-features.sgml (ov-new1.7.18): Add console enhancements.
